--- a/TPI/flask_app/templates/home.html
+++ b/TPI/flask_app/templates/home.html
@@ -33,13 +33,7 @@
         </ul>
 
         <h3>Crear Nuevo Proyecto</h3>
-        <form action="{{ url_for('nuevo_proyecto') }}" method="post">
-            <div class="mb-3">
-                <label for="nombre" class="form-label">Nombre del Proyecto</label>
-                <input type="text" class="form-control" id="nombre" name="nombre" required>
-            </div>
-            <button type="submit" class="btn btn-success">Crear Proyecto</button>
-        </form>
+        <a href="{{ url_for('nuevo_proyecto') }}" class="btn btn-success">Crear Nuevo Proyecto</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
